--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Demo accordion plugin</title>
-    <!-- Add bootstrap style -->
+    <!-- Add Bootstrap style -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <!-- Add jqury library -->
+    <!-- Add jQury library -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- Accordion plugin -->
     <script src="js/accordion.js"></script>
