--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Add Bootstrap style -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <!-- Add jQury library -->
+    <!-- Add jQuery library -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- Accordion plugin -->
     <script src="js/accordion.js"></script>
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="invert-main">
+        <div class="invert-main source_info">
             <div class="container">
                 <div class="row">
                     <ul class="col-md-12 nav nav-pills top-nav"><!-- Think -->
