--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Demo accordion plugin</title>
     <!-- Add Bootstrap style -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Add jQuery library -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
