fix prism highlighting

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- SyntaxHighlighter style -->
-    <link rel="stylesheet" href="css/prism.css">
+    <link rel="stylesheet" href="bower_components/prism/themes/prism.css">
 
     <!-- Add jquery -->
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+      integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+      crossorigin="anonymous"></script>
     <!-- Add plugin Check browser -->
-    <script src="js/accordion-plugin.js"></script>
+    <script src="src/accordion.js"></script>
     <!-- Syntax highlighter Prism js -->
-    <script src="js/prism.js"></script>
+    <script src="bower_components/prism/prism.js"></script>
     <!-- Own main javascript file -->
-    <script src="js/main.js"></script>
+    <script src="src/main.js"></script>
 </head>
 <body data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="170">
 <header class="header">
