--- a/demo.html
+++ b/demo.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Add jQuery library -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+      integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- Accordion plugin -->
-    <script src="js/accordion.js"></script>
+    <script src="src/accordion.js"></script>
     <!-- Own scripts -->
-    <script src="js/main.js"></script>
+    <script src="src/main.js"></script>
 </head>
 <body>
     <main class="container">
