--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
+            <div id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="card">
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="card">
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="card">
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
