--- a/index.html
+++ b/index.html
@@ -1,159 +1,152 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
+  <head lang="en">
+    <meta charset="utf-8">
     <title>Accordion plugin documentation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- SyntaxHighlighter style -->
     <link rel="stylesheet" href="bower_components/prism/themes/prism.css">
-
-    <!-- Add jquery -->
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-      integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
-      crossorigin="anonymous"></script>
-    <!-- Add plugin Check browser -->
-    <script src="src/accordion.js"></script>
-    <!-- Syntax highlighter Prism js -->
-    <script src="bower_components/prism/prism.js"></script>
-    <!-- Own main javascript file -->
-    <script src="src/main.js"></script>
-</head>
-<body data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="170">
+  </head>
+  <body data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="170">
     <header>
-        <nav class="navbar navbar-toggleable-md fixed-top navbar-inverse bg-primary" role="navigation">
-            <div class="container">
-                <a class="navbar-brand" href="#">Accordion</a>
+      <nav class="navbar navbar-toggleable-md fixed-top navbar-inverse bg-primary" role="navigation">
+        <div class="container">
+          <a class="navbar-brand" href="#">Accordion.js</a>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#home" data-offset="70">Description</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#examples">Examples</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#options">Options</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#faq">FAQ</a>
-                        </li>
-                    </ul>
-                </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#home" data-offset="70">Description</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#examples">Examples</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#options">Options</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#faq">FAQ</a>
+              </li>
+            </ul>
+          </div>
 
-                <form class="form-inline">
-                    <button type="button" class="btn btn-outline-success">Download</button>
-                </form>
-            </div>
-        </nav>
+          <form class="form-inline">
+            <button type="button" class="btn btn-outline-success">Download</button>
+          </form>
+        </div>
+      </nav>
     </header>
 
     <main class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 id="home">Accordion plugin can collapse your divs</h1>
-                <p>Latest version is 0.8.5</p>
-                <p>This plugin will remeber about collapsed div and will open collapsed object on a hash</p>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h1 id="home">Accordion plugin can collapse your divs</h1>
+          <p>Latest version is 0.8.5</p>
+          <p>This plugin will remeber about collapsed div and will open collapsed object on a hash</p>
         </div>
+      </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                    Collapsible Group Item #1
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="collapse show">
-                            <div class="card-block">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                    Collapsible Group Item #2
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="collapse">
-                            <div class="card-block">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                    Collapsible Group Item #3
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse">
-                            <div class="card-block">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="card">
+              <div class="card-header">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Collapsible Group Item #1</a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="collapse show">
+                <div class="card-block">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                 </div>
+              </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <p>For begin you need check - you use jquery or not use? If you not add jquery plugin - you need do it</p>
-                <p>And inicialize plugin</p>
-                <pre>
-                    <code class="language-javascript">
-    $(document).ready(function() {
-        $('.panel-group').accordionWithLinks({
-            duration: 400
-        });
-    });
-                    </code>
-                </pre>
-
-                <p>All supported params:</p>
-
-                <pre>
-                    <code class="language-javascript">
-    $('.panel-group').accordionWithLinks({
-        easing: 'swing'
-    });
-                    </code>
-                </pre>
-
-
-                <p>In this option you can change amount of show</p>
-
-                <pre>
-                    <code class="language-javascript">
-    $('.panel-group').accordionWithLinks({
-        divHeading: '.panel-heading'
-    });
-                    </code>
-                </pre>
-
-                <pre class="source_info">
-                    <code class="language-javascript">
-    $('.panel-group').accordionWithLinks({
-        divCollapse: '.collapse'
-    });
-                    </code>
-                </pre>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Collapsible Group Item #2</a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="collapse">
+                <div class="card-block">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
             </div>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Collapsible Group Item #3</a>
+                </h4>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse">
+                <div class="card-block">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <p>And initialize plugin</p>
+          <pre>
+            <code class="language-javascript">
+$(document).ready(function() {
+  $('.panel-group').accordionWithLinks({
+    duration: 400
+  });
+});
+            </code>
+          </pre>
+
+          <p>All supported params:</p>
+
+          <pre>
+            <code class="language-javascript">
+$('.panel-group').accordionWithLinks({
+  easing: 'swing'
+});
+            </code>
+          </pre>
+
+
+          <p>In this option you can change amount of show</p>
+
+          <pre>
+            <code class="language-javascript">
+$('.panel-group').accordionWithLinks({
+  divHeading: '.panel-heading'
+});
+            </code>
+          </pre>
+
+          <pre class="source_info">
+            <code class="language-javascript">
+$('.panel-group').accordionWithLinks({
+  divCollapse: '.collapse'
+});
+            </code>
+          </pre>
+        </div>
+      </div>
     </main>
+
+  <!-- Add jquery -->
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+    integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+    crossorigin="anonymous"></script>
+  <!-- Syntax highlighter Prism js -->
+  <script src="bower_components/prism/prism.js"></script>
+  <!-- Add plugin Check browser -->
+  <script src="src/accordion.js"></script>
+  <!-- Own main javascript file -->
+  <script src="src/main.js"></script>
 </body>
 </html>
