--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
   <main class="container">
     <div class="row">
       <div class="col-md-12">
-        <div id="accordion" role="tablist" aria-multiselectable="true">
+        <div id="accordion" class="accordion" role="tablist" aria-multiselectable="true">
           <div class="card">
             <div class="card-header" role="tab">
               <h4 class="panel-title">
